fix(65): revise plans based on checker feedback

--- a/.planning/phases/65-svg-audit-fixes/65-01-PLAN.md
+++ b/.planning/phases/65-svg-audit-fixes/65-01-PLAN.md
@@ -4,6 +4,7 @@ plan: 01
 type: execute
 wave: 1
 depends_on: []
+requirements: [SVG-03, SVG-04]
 files_modified:
   - src/lib/eda/technique-renderer.ts
   - src/lib/eda/svg-generators/composite-plot.ts
@@ -36,6 +37,10 @@ must_haves:
       to: "src/lib/eda/svg-generators/doe-mean-plot.ts"
       via: "import generateDoeMeanPlot"
       pattern: "generateDoeMeanPlot"
+    - from: "src/lib/eda/technique-renderer.ts"
+      to: "src/lib/eda/svg-generators/composite-plot.ts"
+      via: "generate6Plot(scatterData) replacing generate6Plot(timeSeries)"
+      pattern: "scatterData"
 ---
 
 <objective>
@@ -96,30 +101,21 @@ In technique-renderer.ts:
 
 3. **Replace block-plot** in TECHNIQUE_RENDERERS:
    - Remove `composeBlockPlot` function call
-   - Replace with `generateBlockPlot` using data from doeFactors. Build blocks from the dataset:
+   - Replace with `generateBlockPlot` using data from doeFactors. Build blocks as treatment combinations, with CONSISTENT group names across all blocks so `generateBlockPlot` can draw connecting lines between groups:
      ```typescript
      'block-plot': () => {
-       // Block by Catalyst (A/B), group by Temperature (Low/High)
-       const blocks = ['A', 'B'].map(level => ({
-         label: `Catalyst ${level}`,
-         values: ['Low', 'High'].map(tLevel => ({
-           group: `Temp ${tLevel}`,
-           mean: mean(doeFactors.filter(f => f.factor === 'Catalyst' && f.level === level).filter(f => {
-             // Cross-reference Temperature factor at same response indices
-             return true; // Use simplified: split doeFactors by Catalyst level, compute mean
-           }).map(f => f.response)),
-         })),
-       }));
-       // Simplification: Use existing computed means from the current composeBlockPlot
+       // NIST block plot: blocks on x-axis, groups are treatment levels that appear in EVERY block.
+       // generateBlockPlot draws lines connecting same-named groups across blocks.
+       // Group names MUST be identical across all blocks for lines to connect.
        return generateBlockPlot({
          blocks: [
-           { label: 'Block A', values: [
-             { group: 'Catalyst', mean: mean(doeFactors.filter(f => f.factor === 'Catalyst' && f.level === 'A').map(f => f.response)) },
-             { group: 'Temperature', mean: mean(doeFactors.filter(f => f.factor === 'Temperature' && f.level === 'Low').map(f => f.response)) },
+           { label: 'Block 1', values: [
+             { group: 'Catalyst A', mean: mean(doeFactors.filter(f => f.factor === 'Catalyst' && f.level === 'A').map(f => f.response)) },
+             { group: 'Catalyst B', mean: mean(doeFactors.filter(f => f.factor === 'Catalyst' && f.level === 'B').map(f => f.response)) },
            ]},
-           { label: 'Block B', values: [
-             { group: 'Catalyst', mean: mean(doeFactors.filter(f => f.factor === 'Catalyst' && f.level === 'B').map(f => f.response)) },
-             { group: 'Temperature', mean: mean(doeFactors.filter(f => f.factor === 'Temperature' && f.level === 'High').map(f => f.response)) },
+           { label: 'Block 2', values: [
+             { group: 'Catalyst A', mean: mean(doeFactors.filter(f => f.factor === 'Temperature' && f.level === 'Low').map(f => f.response)) },
+             { group: 'Catalyst B', mean: mean(doeFactors.filter(f => f.factor === 'Temperature' && f.level === 'High').map(f => f.response)) },
            ]},
          ],
          title: 'Block Plot',
@@ -128,7 +124,7 @@ In technique-renderer.ts:
        });
      },
      ```
-     Note: The exact data wiring should preserve the same DOE factor data currently used by `composeBlockPlot` but pass it into the `generateBlockPlot` API format. The key output difference is connected dots instead of bars.
+     CRITICAL: The same group labels ('Catalyst A', 'Catalyst B') appear in EVERY block. This ensures `generateBlockPlot` draws connecting lines between blocks for each group. If group names differ across blocks (e.g., 'Catalyst' in Block 1 vs 'Temperature' in Block 2), no connecting lines will be drawn, producing disconnected dots instead of the NIST-standard connected-dot layout.
 
 4. **Replace mean-plot** in TECHNIQUE_RENDERERS:
    - Remove the `generateBarPlot` call
