--- a/.planning/phases/65-svg-audit-fixes/65-02-PLAN.md
+++ b/.planning/phases/65-svg-audit-fixes/65-02-PLAN.md
@@ -4,6 +4,7 @@ plan: 02
 type: execute
 wave: 1
 depends_on: []
+requirements: [SVG-03, SVG-04]
 files_modified:
   - src/lib/eda/svg-generators/line-plot.ts
   - src/lib/eda/technique-renderer.ts
