--- a/.planning/phases/65-svg-audit-fixes/65-03-PLAN.md
+++ b/.planning/phases/65-svg-audit-fixes/65-03-PLAN.md
@@ -4,15 +4,18 @@ plan: 03
 type: execute
 wave: 2
 depends_on: ["65-01", "65-02"]
+requirements: [SVG-01, SVG-02, SVG-03, SVG-04]
 files_modified:
   - .planning/phases/65-svg-audit-fixes/65-AUDIT.md
+  - src/lib/eda/technique-renderer.ts
 autonomous: true
 
 must_haves:
   truths:
     - "A markdown audit checklist documents all 29 techniques with pass/fail for axes, shapes, labels, scales, reference lines, and data patterns"
     - "All 29 technique pages build without console errors"
-    - "No remaining HIGH or MEDIUM priority issues are marked FAIL in the audit"
+    - "All HIGH and MEDIUM issues identified in 65-RESEARCH.md are marked FIXED in the audit"
+    - "All 6 Tier B variant datasets produce visually distinct, statistically correct patterns validated against NIST descriptions"
   artifacts:
     - path: ".planning/phases/65-svg-audit-fixes/65-AUDIT.md"
       provides: "Complete audit checklist for all 29 SVG techniques"
@@ -150,24 +153,85 @@ If Task 1's build passes clean and audit shows no FAIL items, this task complete
   <done>All build errors resolved (if any). Audit checklist accurately reflects the final state of all 29 technique SVGs.</done>
 </task>
 
+<task type="auto">
+  <name>Task 3: Validate and fix Tier B variant data patterns</name>
+  <files>src/lib/eda/technique-renderer.ts</files>
+  <action>
+Validate all 6 Tier B techniques' variant datasets produce visually distinct, statistically correct patterns per NIST descriptions. This addresses SVG-04 (data pattern correctness) which requires fixing incorrect statistical patterns, not just auditing them.
+
+**For each of the 6 Tier B techniques with variants**, read the variant data generation code in technique-renderer.ts and validate:
+
+1. **Histogram variants (8 variants):**
+   - `bimodal`: Two distinct peaks visible (verify mixture of two normals with separated means)
+   - `right-skewed`: Asymmetric tail extending right (verify exponential or chi-squared distribution)
+   - `heavy-tailed`: Wider spread than normal (verify Cauchy or t-distribution data)
+   - `uniform`: Flat bars, no peak (verify uniform random data)
+   - Remaining 4: Verify each produces a visually distinct pattern
+
+2. **Scatter Plot variants (12 variants):**
+   - `quadratic`: Parabolic shape (verify y = ax^2 + noise)
+   - `clustered`: Distinct groups (verify cluster generation with separated centroids)
+   - `heteroscedastic`: Fan-shaped spread (verify variance increases with x)
+   - `no-correlation`: Random cloud (verify independent x, y)
+   - Remaining 8: Verify each produces a visually distinct pattern
+
+3. **Normal Probability Plot variants (4 variants):**
+   - `right-skewed`: S-curve deviating at upper end
+   - `heavy-tailed`: S-curve deviating at both ends
+   - `light-tailed`: Reverse S-curve at both ends
+   - `uniform`: Step-like deviation from diagonal
+
+4. **Lag Plot variants (4 variants):**
+   - `autoregressive`: Strong positive diagonal correlation (verify phi >= 0.8)
+   - `seasonal`: Circular or periodic structure
+   - `trend`: Cluster in one direction
+   - `random`: Uniform cloud with no structure
+
+5. **Autocorrelation Plot variants (4 variants):**
+   - `ar1`: Exponential ACF decay (verify AR(1) coefficient)
+   - `ma1`: Single spike at lag 1, then zero (verify MA(1) structure)
+   - `seasonal`: Periodic ACF peaks (verify period matches seasonal component)
+   - `white-noise`: All ACF values within confidence band
+
+6. **Spectral Plot variants (3 variants):**
+   - `single-frequency`: One dominant peak
+   - `multiple-frequencies`: Two or more peaks
+   - `white-noise`: Flat spectrum
+
+**For each variant that FAILS validation** (data does not produce the expected visual pattern):
+- Fix the data generation parameters (e.g., increase AR coefficient, adjust mixture separation, change seed)
+- Document the fix in the audit checklist's "Data Pattern" column
+
+**Update 65-AUDIT.md** with a "Tier B Variant Validation" section documenting each variant's pass/fail status and any fixes applied.
+  </action>
+  <verify>
+- `npx astro build` completes with 0 errors after any variant data fixes
+- 65-AUDIT.md contains a "Tier B Variant Validation" section with all 6 techniques and their variant pass/fail status
+- `grep -c "Tier B" .planning/phases/65-svg-audit-fixes/65-AUDIT.md` returns at least 1
+  </verify>
+  <done>All 6 Tier B techniques' variant datasets validated. Any data pattern issues found are fixed (parameters adjusted). Audit checklist documents variant validation results. Build succeeds.</done>
+</task>
+
 </tasks>
 
 <verification>
 1. `npx astro build` completes with 0 errors
 2. 65-AUDIT.md documents all 29 techniques with per-dimension pass/fail
-3. All HIGH and MEDIUM severity issues from 65-RESEARCH.md are resolved (marked FIXED in audit)
+3. All HIGH and MEDIUM severity issues from 65-RESEARCH.md are marked FIXED in the audit
 4. No technique page produces console errors during build
-5. Success criteria from phase roadmap are met:
+5. All 6 Tier B variant datasets validated with pass/fail documented in audit
+6. Success criteria from phase roadmap are met:
    - SC1: Audit checklist exists with pass/fail (65-AUDIT.md)
    - SC2: Visual inaccuracies fixed (plans 01 + 02)
-   - SC3: Data pattern issues fixed (plans 01 + 02)
+   - SC3: Data pattern issues fixed (plans 01 + 02 + Task 3 variant fixes)
    - SC4: All 29 pages render without errors (verified by build)
 </verification>
 
 <success_criteria>
 - 65-AUDIT.md exists with all 29 technique rows
 - Build passes with zero errors
-- No HIGH or MEDIUM issues remain as FAIL
+- All HIGH and MEDIUM issues identified in 65-RESEARCH.md are marked FIXED
+- All 6 Tier B variant datasets produce correct statistical patterns
 - Phase 65 success criteria 1-4 are met
 </success_criteria>
 
